- Updated Laravel version to v5.6.38
- Initial commit for Unit testin using PHP unit. We are starting with TDD and every module and class will be tested using unit testcases.
- Updated Artful log in Readme.md, release notes and CLI installer
- Added phpunit.bat for running unit tests on windows machines
- Integrated slack channel for travis build notifications
- Updated Bugsnag API key

|=====================================================
| v1.10 Laravel Framework update
|=====================================================
Faveo helpdesk v1.10 introduces some backward non compatible changes due to framework updates and introduces some refinement patches for existing functionalities.

* v1.10 updates the Laravel framework version to 5.6.33 requires php7.1.3 or greater version to run.
* CLI commands for installation has been added.
* Better language control access for users
* Check for system email configuration
* Email sending out department wise

To know more please follow the links below
https://github.com/ladybirdweb/faveo-helpdesk/releases
https://github.com/ladybirdweb/faveo-helpdesk/wiki 

|=====================================================
| v1.9.6 Facebook login bug fix patch
|=====================================================
## Bug Fixed
    Token parsing issue for Facebook which prevents users from login the system using Facebook oAuth API.

|=====================================================
| v1.9.5 (security hot fixt patch2)
|=====================================================
## Bug Fixed
    Prevents execution of backdoor scripts
    Prevents users from uploading PHP files into user's profile picture
    Handling token mismatch error when the page is opened for too long and session gets expired

|=====================================================
| v1.9.4 (security hot fixt patch)
|=====================================================
## Bug Fixed
    Github issue #446 regarding CSRF